--- a/resources/package.json
+++ b/resources/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "jquery": "^3.2.1",
-    "three-js": "^79.0.0"
+    "three-js": "^79.0.0",
+    "tween.js": "^16.6.0"
   }
 }
